--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,7 +59,7 @@ jobs:
   parameters:
         name: cargo_cross
         displayName: Cross check and test
-        rust_version: stable # You can specify here beta nightly or even 1.31
+        rust_version: nightly # You can specify here beta nightly or even 1.31
         check_targets:
           - i686-unknown-freebsd
           # - thumbv7em-none-eabihf # bare metal require no_std! future enabled.
