--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ resources:
       ref: refs/heads/nightly ## TODO you may want to change it to refs/tags/TAG_NAME.
       endpoint: github_release
 
+
 jobs:
 # Check formatting
 - template: ci/rustfmt.yml@templates
@@ -30,26 +31,26 @@ jobs:
 
 # This represents the minimum Rust version supported.
 # Tests are not run as tests may require newer versions of rust.
-- template: ci/cargo-check.yml@templates
-  parameters:
-    name: minrust
-    # rust_version: 1.38.0 # The 2018 edition
-    rust_version: dev
-    displayName: Check rust min ver
+# - template: ci/cargo-check.yml@templates
+#   parameters:
+#     name: minrust
+#     # rust_version: 1.38.0 # The 2018 edition
+#     rust_version: dev
+#     displayName: Check rust min ver
 
 ################
 # Test stage   #
 ###############
 
 # Test stable
-- template: ci/test.yml@templates
-  parameters:
-    dependsOn:
-      - cargo_check
-    name: cargo_test_stable
-    displayName: Cargo test
-    rust_version: nightly
-    cross: true # Test on Windows and macOS
+# - template: ci/test.yml@templates
+#   parameters:
+#     dependsOn:
+#       - cargo_check
+#     name: cargo_test_stable
+#     displayName: Cargo test
+#     rust_version: nightly
+#     cross: true # Test on Windows and macOS
 
 # Test nightly
 - template: ci/test.yml@templates
@@ -60,18 +61,18 @@ jobs:
 
 # Test cross
 # List of supported targets is available here: https://github.com/rust-embedded/cross#supported-targets
-- template: ci/cargo-cross.yml@templates
-  parameters:
-        name: cargo_cross
-        displayName: Cross check and test
-        rust_version: nightly # You can specify here beta nightly or even 1.31
-        check_targets:
-          - i686-unknown-freebsd
-          # - thumbv7em-none-eabihf # bare metal require no_std! future enabled.
-        test_targets:
-          - mips-unknown-linux-gnu
-          - armv7-unknown-linux-musleabihf
-          - x86_64-unknown-linux-gnu
+# - template: ci/cargo-cross.yml@templates
+#   parameters:
+#         name: cargo_cross
+#         displayName: Cross check and test
+#         rust_version: nightly # You can specify here beta nightly or even 1.31
+#         check_targets:
+#           - i686-unknown-freebsd
+#           # - thumbv7em-none-eabihf # bare metal require no_std! future enabled.
+#         test_targets:
+#           - mips-unknown-linux-gnu
+#           - armv7-unknown-linux-musleabihf
+#           - x86_64-unknown-linux-gnu
 
 ###################
 #    DEPLOY PART  #
