--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,7 +9,7 @@ resources:
     - repository: templates
       type: github
       name: foxundermoon/rust-azure-pipelines
-      ref: refs/heads/nightly ## TODO you may want to change it to refs/tags/TAG_NAME.
+      ref: refs/heads/newnightly ## TODO you may want to change it to refs/tags/TAG_NAME.
       endpoint: github_release
 
 
